Implemented dependency injections.

--- a/Source/Core/NMag.Services/NMag.Services.csproj
+++ b/Source/Core/NMag.Services/NMag.Services.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NMag.Domain\NMag.Domain.csproj" />
+    <ProjectReference Include="..\NMag.Persistence\NMag.Persistence.csproj" />
   </ItemGroup>
 
   <ItemGroup>
